# byebye-docs

./: CLAUDE.md  INSTALL.md  README.md  setup-local.sh  setup.sh
.agent/: architecture.yaml  codegen.yaml  constraints.yaml  context.yaml  manifest.yaml
.github/workflows/: publish-pypi.yml
ai-first-dev-template/docs/agent/: constraints.yaml
ai-first-dev-template/docs/agent/tools/: tool_schemas.yaml
ai-first-dev-template/docs/architecture/: domain_model.md  system_overview.md
ai-first-dev-template/docs/dev_process/: agent_commit_rules.taml  coding_standards.md
ai-first-dev-template/docs/ops/: ci_cd_pipeline.md
ai-first-dev-template/docs/product/: nonfunctional_requirements.yaml  requirements.taml
ai-first-dev-template/generator_instructions/: forbidden_actions.md
ai-first-dev-template/meta/: change_history.md  glossary.md
ai-first-dev-template/project/tasks/: initial_backlog.yaml
docs/agent/: behaviours.md  roles.yaml
docs/agent/tools/: available_tools.md
docs/architecture/: sequence_diagrams.md
docs/architecture/data_schemas/: entities.yaml
docs/dev_process/: branch_strategy.md  review_guidelines.md
docs/ops/: logs_schema.yaml  monitoring_plan.md
docs/product/: user_scenarios.md  vision.md
generator_instructions/: file_update_policy.md  generation_rules.yaml  system_prompt.md
mcp-server/: README.md  pyproject.toml
mcp-server/byebye_docs_mcp/: server.py
mcp-server/design_docs_mcp/: __init__.py  __main__.py  server.py
meta/: dependencies.md  risks.md
project/: roadmap.md
scripts/: init-project.sh
(+2 files in other folders)
