[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "byebye-docs"
version = "0.1.0"
description = "MCP server for AI-first development design document templates"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Design Docs MCP Team" }
]
keywords = ["mcp", "ai", "byebye-docs", "templates", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.1",
]

[project.scripts]
byebye-docs = "design_docs_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["design_docs_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
